--- a/src/main/header/Header.module.css
+++ b/src/main/header/Header.module.css
@@ -1,17 +1,59 @@
-.header{
+.header {
     background-color: #3f51b5;
     height: 60px;
 }
 
-@media all and (min-width:526px) and (max-width:990px) {
-    .header{
+.logOut {
+    position: absolute;
+    right: 25px;
+    top: 15px;
+    color: white;
+}
+
+.logOut:hover {
+    position: absolute;
+    right: 25px;
+    top: 15px;
+    color: yellow;
+    font-weight: 500;
+}
+
+@media all and (min-width: 835px) and (max-width: 990px) {
+    .header {
+        background-color: #3f51b5;
+        height: 80px;
+    }
+    .logOut {
+        position: absolute;
+        right: 25px;
+        top: 55px;
+        color: white;
+    }
+}
+
+@media all and (min-width: 526px) and (max-width: 834px) {
+    .header {
         background-color: #3f51b5;
         height: 120px;
     }
-}
-@media all and (min-width:1px) and (max-width:525px) {
-    .header{
-        background-color: #3f51b5;
-        height: 170px;
+    .logOut {
+        position: absolute;
+        right: 25px;
+        top: 70px;
+        color: white;
     }
 }
+
+@media all and (min-width: 1px) and (max-width: 525px) {
+    .header {
+        background-color: #3f51b5;
+        height: 140px;
+    }
+    .logOut {
+        position: absolute;
+        right: 45px;
+        top: 110px;
+        color: white;
+    }
+}
+
