--- a/src/common/Profile.module.css
+++ b/src/common/Profile.module.css
@@ -1,4 +1,4 @@
-.generalDiv{
+.generalDiv {
     margin-top: 25px;
     display: flex;
     justify-content: space-evenly;
@@ -7,26 +7,58 @@
     width: 100%;
 }
 
-.general{
+.general {
     background-color: dimgrey;
     border: #282c34 1px solid;
     width: 95%;
-    height: 500px;
+    height: 600px;
 }
-.header{
-    color:white;
+
+.header {
+    color: white;
     margin-left: 25px;
 }
 
-.table{
-    color:white;
+.table {
+    color: white;
 }
 
-.th{
+.th {
     border: #282c34 1px solid;
-  }
+}
 
 .table tr:nth-child(even) {
     background-color: skyblue;
 }
 
+/*.paginationBlock{*/
+/*    margin-top: 25px;*/
+/*}*/
+
+.generalForPagination {
+     margin-top: 55px;
+    background-color: #424242;
+    height: 25px;
+    width: 33%;
+}
+
+.paginationBlock:hover {
+    margin-top: 25px;
+    color: white;
+    cursor: pointer;
+}
+
+.ActivePaginationBlock {
+    color: yellow;
+    margin-top: 25px;
+}
+
+.ActivePaginationBlock:hover {
+      margin-top: 25px;
+    color: white;
+    cursor: pointer;
+}
+
+.arrowHover:hover{
+    background-color: yellow;
+   }
